--- a/Coupons/Promotion.Coupon/Web.config
+++ b/Coupons/Promotion.Coupon/Web.config
@@ -22,6 +22,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="Off" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
