--- a/Coupons/Promotion.Coupon.Repository/Promotion.Coupon.Repository.csproj
+++ b/Coupons/Promotion.Coupon.Repository/Promotion.Coupon.Repository.csproj
@@ -60,20 +60,12 @@
       <DependentUpon>Promotion.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\AddressCepRepository.cs" />
-    <Compile Include="Repositories\AddressRepository.cs" />
     <Compile Include="Repositories\AdminAccountRepository.cs" />
     <Compile Include="Repositories\Base\RepositoryBase.cs" />
-    <Compile Include="Repositories\BlockedCpfRepository.cs" />
-    <Compile Include="Repositories\CityRepository.cs" />
     <Compile Include="Repositories\PersonRepository.cs" />
-    <Compile Include="Repositories\LuckyCodeRepository.cs" />
     <Compile Include="Repositories\NewsSendingRepository.cs" />
-    <Compile Include="Repositories\ProductRepository.cs" />
+    <Compile Include="Repositories\PromotionRepository.cs" />
     <Compile Include="Repositories\ReceiptRepository.cs" />
-    <Compile Include="Repositories\SequenceSeriesRepository.cs" />
-    <Compile Include="Repositories\SeriesRepository.cs" />
-    <Compile Include="Repositories\VendorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Promotion.Coupon.Entity\Promotion.Coupon.Entity.csproj">
