--- a/Coupons/Promotion.Coupon.Application/Promotion.Coupon.Application.csproj
+++ b/Coupons/Promotion.Coupon.Application/Promotion.Coupon.Application.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Applications\PersonApplication.cs" />
     <Compile Include="Applications\ProductApplication.cs" />
     <Compile Include="Applications\ReceiptApplication.cs" />
+    <Compile Include="Applications\VoucherApplication.cs" />
     <Compile Include="Interfaces\Base\IApplicationBase.cs" />
     <Compile Include="Interfaces\IAddressApplication.cs" />
     <Compile Include="Interfaces\IAddressCepApplication.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Interfaces\ISequenceSeriesApplication.cs" />
     <Compile Include="Interfaces\ISeriesApplication.cs" />
     <Compile Include="Interfaces\IVendorApplication.cs" />
+    <Compile Include="Interfaces\IVoucherApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
