--- a/Coupons/Promotion.Coupon.Repository/Promotion.Coupon.Repository.csproj
+++ b/Coupons/Promotion.Coupon.Repository/Promotion.Coupon.Repository.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Repositories\NewsSendingRepository.cs" />
     <Compile Include="Repositories\PromotionRepository.cs" />
     <Compile Include="Repositories\ReceiptRepository.cs" />
+    <Compile Include="Repositories\VoucherRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Promotion.Coupon.Entity\Promotion.Coupon.Entity.csproj">
