--- a/Coupons/Promotion.Coupon/Web.config
+++ b/Coupons/Promotion.Coupon/Web.config
@@ -14,9 +14,14 @@
     <!--<add key="PreserveLoginUrl" value="true" />-->
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="Ambiente" value="Interno" />
+
   </appSettings>
   
   <connectionStrings>
+   <!--<add name="GymPass" connectionString="metadata=res://*/EntityFramework.Promotion.csdl|res://*/EntityFramework.Promotion.ssdl|res://*/EntityFramework.Promotion.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=in10sqd500;initial catalog=www.promocaointimussport.com.br_1;integrated security=true;connect timeout=30;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
+
     <add name="GymPass" connectionString="metadata=res://*/EntityFramework.Promotion.csdl|res://*/EntityFramework.Promotion.ssdl|res://*/EntityFramework.Promotion.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=179.188.42.175;initial catalog=intimusgympass;user id=intimusgympass;password=z3277009@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
@@ -37,6 +42,7 @@
       <add verb="*" path="routes.axd" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
     </httpHandlers></system.web>
   <system.webServer>
+    
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
